<resources>
    <string name="app_name">InventoryApp</string>
    <string name="action_settings">Settings</string>
    <string name="item_insert_failed">Item insert failed</string>
    <string name="item_update_failed">Item update failed.</string>
    <string name="item_update_successfull">Item update successful.</string>
    <string name="item_delete_failed">Item delete failed.</string>
    <string name="item_delete_successful">Item delete successful.</string>
    <string name="delete_this_item">Delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="item_out_of_stock">Item out of stock.</string>
    <string name="product_name">Product name:</string>
    <string name="price">Price:</string>
    <string name="stock">Stock:</string>
    <string name="reduce">-</string>
    <string name="add">+</string>
    <string name="supplier_name">Supplier name:</string>
    <string name="supplier_phone">Supplier phone:</string>
    <string name="add_image">Add Image</string>
    <string name="supplier_email">Supplier email:</string>
    <string name="sale">sale</string>
    <string name="dollar">\u0020$</string>
    <string name="in_stock">In Stock:\u0020</string>
    <string name="inventory_is_empty">Inventory is empty \n Press button to add item</string>
</resources>
